--- a/package.json
+++ b/package.json
@@ -19,7 +19,21 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "@capacitor/app": "1.0.2",
+    "@capacitor/core": "3.1.1",
+    "@capacitor/haptics": "1.0.2",
+    "@capacitor/keyboard": "1.0.2",
+    "@capacitor/status-bar": "1.0.2",
+    "@ionic-native/core": "^5.34.0",
+    "@ionic-native/in-app-browser": "^5.34.0",
+    "@ionic-native/social-sharing": "^5.34.0",
     "@ionic/angular": "^5.5.2",
+    "@ionic/storage": "^3.0.6",
+    "@ionic/storage-angular": "^3.0.6",
+    "cordova-plugin-inappbrowser": "^5.0.0",
+    "cordova-plugin-x-socialsharing": "^6.0.3",
+    "cordova-sqlite-storage": "^6.0.0",
+    "localforage-cordovasqlitedriver": "^1.8.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -34,6 +48,7 @@
     "@angular/compiler": "~12.0.1",
     "@angular/compiler-cli": "~12.0.1",
     "@angular/language-service": "~12.0.1",
+    "@capacitor/cli": "3.1.1",
     "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
